# CS171_final_project

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.h  Image.h  Reader.h  camera.h  common.h  config.h  geometry.h  integrator.h  interaction.h  ray.h  reader.h  scene.h  utils.h
libs/: CMakeLists.txt
libs/stb/: stb_image_write.h
libs/tinyobjloader/: tiny_obj_loader.h
report/: report.tex
src/: AABB.cpp  Image.cpp  Reader.cpp  camera.cpp  geometry.cpp  integrator.cpp  main.cpp  reader.cpp  scene.cpp
